# basicOperations

./: .gitignore  CMakeLists.txt  Makefile  chatGpt.txt  pyproject.toml  readme.md  setup.py
src/: basicOperations.cpp  basicOperations.hpp  binder.cpp  cmdInterface.cpp
tests/: send_operation.py  test.py  test_basicOperations.py
